# nse-portfolio-risk-scanner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  portfolio_20260630.csv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hermes/: changelog_patch.py
.hermes/plans/: 2026-07-03_pdf-redesign.md
.streamlit/: config.toml
data/: __init__.py  cache.py  prices.py  sectors.yaml
engine/: __init__.py  _log.py  backtesting.py  benchmark.py  delivery.py  factors.py  fundamentals.py  garch_var.py  narrative.py  optimization.py  optimization_advanced.py  pelve.py  performance.py  portfolio.py  recommendations.py  regime.py  risk.py  scenario.py  scoring.py  sector.py  warnings.py
internals/: engineering_memory.md
research/: architecture-redesign.md  open-source-ecosystem-report.md
reviews/: AUDIT_REPORT.md  AUDIT_SUMMARY.md
storage/: __init__.py  db.py  models.py
tests/: conftest.py  test_backtesting.py  test_benchmark.py  test_cache.py  test_db.py  test_delivery.py  test_factors.py  test_fundamentals.py  test_garch_var.py  test_integration.py  test_macro_scenarios.py  test_models.py  test_narrative.py  test_optimization.py  test_pdf_export.py  test_pelve.py  test_performance.py  test_portfolio.py  test_prices.py  test_recommendations.py  test_regime.py  test_risk.py  test_scenario.py  test_scoring.py  test_sector.py  test_warnings.py
ui/: __init__.py  charts.py  charts_pdf.py  dashboard.py  export.py  icons.py  styles.py  upload.py
