[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nse-risk-scanner"
version = "0.2.0"
description = "Analyze your NSE portfolio for risk metrics"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "plotly>=5.20",
    "yfinance>=0.2.40",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
pdf = [
    "fpdf2>=2.7",
]

[tool.setuptools.packages.find]
include = ["engine*", "data*", "ui*", "storage*"]
