[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nse-risk-scanner"
version = "0.2.0"
description = "Analyze your NSE portfolio for risk metrics"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "plotly>=5.20",
    "yfinance>=0.2.40",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "loguru>=0.7.2",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.0",
    "pre-commit>=4.0",
    "vcrpy>=8.0.0",
]
pdf = [
    "fpdf2>=2.7",
]
nse = [
    "nselib>=2.5.0",
]
ml = [
    "hmmlearn>=0.3.0",
]

[tool.uv]
package = false

[tool.setuptools.packages.find]
include = ["engine*", "data*", "ui*", "storage*", "nse_risk_scanner*"]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
